# GuiZang_users

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.trae/documents/: 用户微服务-数据库与API设计-开发计划.md  监控方案-Grafana-Tempo-Loki-Prometheus-OTelCollector-实施计划.md
.trae/rules/: code-rules.md
changelog/: 20260423.md
config/: default.toml  dev.toml
deploy/observability/: docker-compose.yml  otel-collector-config.yaml
migrations/: 20260414120000_init.sql  20260414121000_seed_rbac.sql  20260423090000_add_users_session_version.sql
src/: error.rs  main.rs
src/api/: auth.rs  extractors.rs  mod.rs  permissions.rs  roles.rs  users.rs
src/infra/: jwt.rs  mod.rs  password.rs
src/repo/: credentials.rs  idempotency.rs  mod.rs  permissions.rs  refresh_tokens.rs  roles.rs  users.rs
src/service/: auth.rs  mod.rs  rbac.rs
