[package]
name = "gz-users"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[dependencies]
axum = "0.8"
gz-core = { git = "ssh://git@github.com/StainsGate/GuiZang-.git", tag = "0.1.2" }
gz-observe = { git = "ssh://git@github.com/StainsGate/GuiZang-.git", tag = "0.1.2" }
gz-web = { git = "ssh://git@github.com/StainsGate/GuiZang-.git", tag = "0.1.2" }
argon2 = "0.5"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
hex = "0.4"
jsonwebtoken = "9"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8.6", default-features = false, features = ["macros", "runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "net"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
